Revert manifest change
Didn't move to the build folder in time and now it's permanent. Oh well!

--- a/ModMeta/manifest.json
+++ b/ModMeta/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "RoR2TTCG",
+    "name": "RoR2_The_Trading_Card_Game",
     "version_number": "1.0.0",
     "website_url": "https://github.com/ThinkInvis/RoR2-TTCG",
     "description": "Turns all pickup models into trading cards.",
